<resources>
    <string name="app_name">Hibret POS</string>
    <string name="kernel_configuring">Kernel Configuring</string>
    <string name="kernel_configuration">Kernel Configuration</string>
    <string name="geidea">Geidea</string>
    <string name="selec_application">Select Application</string>
    <string name="cancel">Cancel</string>
    <string name="purchase">Purchase</string>
    <string name="prompt_present_card_or_device">Present card or device</string>
    <string name="wave_card_again">WAVE CARD AGAIN</string>
    <string name="please_wait">Please Wait...</string>
    <string name="btn_cal_00">00</string>
    <string name="btn_cal_0">0</string>
    <string name="btn_cal_1">1</string>
    <string name="btn_cal_2">2</string>
    <string name="btn_cal_3">3</string>
    <string name="btn_cal_4">4</string>
    <string name="btn_cal_5">5</string>
    <string name="btn_cal_6">6</string>
    <string name="btn_cal_7">7</string>
    <string name="btn_cal_8">8</string>
    <string name="btn_cal_9">9</string>
    <string name="btn_esc">Esc</string>
    <string name="btn_confirm">Confirm</string>
    <string name="amount_default">0</string>
    <string name="prompt_total_amount">Total Amount</string>
    <string name="total_amount">TOTAL AMOUNT : </string>
    <string name="enter_pin">Enter Your PIN</string>
    <string name="ok">OK</string>
    <string name="no">No</string>
    <string name="err_expired_card">Expired Card</string>
    <string name="err_card_unsupported">CARD SCHEME NOT SUPPORTED</string>
    <string name="card_read_timeout">Card Read Timeout</string>
    <string name="multiple_card_found">Multiple card found</string>
    <string name="pin_quit">Pin Quit</string>
    <string name="pin_timeout">Pin entry timeout</string>
    <string name="invalid_card">Invalid Card</string>
    <string name="blocked_card">Blocked Card</string>
    <string name="pin_quit_msg">Pin Quit</string>
    <string name="err_user_cancel">Transaction Cancelled</string>
    <string name="emv_other_interface">Emv other interface</string>
    <string name="no_active_application_found">No Active Application Found</string>
    <string name="card_scheme_not_found">Card Scheme Not Found</string>
    <string name="card_read_error_eng">Card Read Error</string>
    <string name="card_scheme_not_supported">CARD SCHEME NOT SUPPORTED</string>
    <string name="use_smart_card_reader">Insert card only use smart card reader</string>
    <string name="emv_terminated">EMV Terminated</string>
    <string name="emv_command_fail">EMV Command Fail</string>
    <string name="print">Print</string>
    <string name="stop_print">Stop Print</string>
    <string name="resume_print">Resume Print</string>
    <string name="print_n_times">Print "\"N"\" Times</string>
    <string name="settings">Settings</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="inject_dukpt_key">Inject DUKPT key</string>
    <string name="erase_all_key">Erase All Key</string>
    <string name="fetch_current_ksn">Fetch Current KSN</string>
    <string name="increase_ksn">Increase KSN</string>
    <string name="usb_communication">USB Communication</string>
    <string name="print_receipt">Print Receipt</string>
    <string name="device_owner_verification_msg_eng">DEVICE OWNER IDENTITY VERIFIED</string>
    <string name="cardholder_pin_verified_eng">CARDHOLDER PIN VERIFIED</string>
    <string name="no_verification_eng">NO VERIFICATION REQUIRED</string>
    <string name="card_holder_verified_signature_eng">CARDHOLDER VERIFIED BY SIGNATURE</string>
    <string name="cardholder_pin_plus_verified_eng">CARDHOLDER PIN VERIFIED+</string>
    <string name="approved">APPROVED</string>
    <string name="declined">DECLINED</string>
    <string name="restart">Restart Device</string>
    <string name="shutdown">Shutdown Device</string>
    <string name="power_button">Power Button</string>
    <string name="nav_button">Navigation Button</string>
    <string name="start_new_transaction">Start New Transaction</string>
    <string name="inject_master_Session_key">Inject Master Session key</string>
    <string name="label_port_open">OPEN SerialPort</string>
    <string name="label_port_close">CLOSE SerialPort</string>
    <string name="label_port_connect">Connect SerialPort</string>
    <string name="label_port_disconnect">DisConnect SerialPort</string>
    <string name="label_port_send">SEND</string>
    <string name="label_port_recv">RECV</string>
    <string name="label_port_nonblockrecv">NONBLOCK RECV</string>
    <string name="label_port_reset">RESET</string>
    <string name="label_port_cancelrecv">CANCEL RECV</string>
    <string name="enter_expiry_date">Enter expiry date</string>
    <string name="enter_amount">Enter amount</string>
    <string name="_0_0">0.0</string>
    <string name="enter_card_number">Enter Card Number</string>
    <string name="communication_config">Communication Config</string>
    <string name="update_merchant_id">Update Merchant ID</string>
    <string name="current_tid">Current TID:</string>
    <string name="register">Register</string>
    <string name="search_by_approval_code">Search By Approval Code</string>
    <string name="enter_approval_code">Enter Approval Code</string>
    <string name="search">Search</string>
    <string name="search_by_receipt_no">Search By Receipt No</string>
    <string name="refund">Refund</string>
    <string name="enter_refund_amount">Enter Refund Amount</string>
    <string name="confirm">Confirm</string>
    <string name="transactions_text">Transactions</string>
    <string name="login_text">Login</string>
    <string name="sale_text">Sale</string>
    <string name="cashier_text">Cashier</string>
    <string name="help_text">Help</string>
    <string name="transactions_dialog_title_txt">Transactions</string>
    <string name="sale_dialog_txt">Sale</string>
    <string name="reversal_dialog_txt">Reversal</string>
    <string name="balance_inq_dialog_txt">Balance Inq</string>
    <string name="purchase_cash_back_dialog_txt">Purchase Cash Back</string>
    <string name="pre_auth_dialog_txt">Pre Auth</string>
    <string name="pre_auth_completion_dialog_txt">Pre Auth Completion</string>
    <string name="refund_dialog_txt">Refund</string>
    <string name="hibret_pos_txt">Hibir POS</string>
    <string name="login_txt">LOGIN</string>
    <string name="hint_username_txt">Username</string>
    <string name="hint_password_txt">Password</string>
    <string name="login_btn_txt">LOGIN</string>
    <string name="forgot_password_txt">Forgot Password?</string>
    <string name="help_and_support_txt">Help and Support</string>
    <string name="nav_home_txt">Home</string>
    <string name="nav_settings_txt">Settings</string>
    <string name="nav_load_kernel_config_txt">Load Kernel Config</string>
    <string name="nav_help_txt">Help</string>
    <string name="nav_about_us_txt">About Us</string>
    <string name="nav_rate_us_txt">Rate Us</string>
    <string name="nav_exit_txt">Exit</string>
    <string name="admin_manage_transaction_txt">Manage Transaction</string>
    <string name="admin_manage_support_txt">Manage Support</string>
    <string name="admin_receive_key_txt">Receive Key</string>
    <string name="admin_config_terminal_txt">Config Terminal</string>
    <string name="admin_terminal_info_txt">Terminal Info</string>
    <string name="admin_settings_txt">Settings</string>
    <string name="admin_menu_txt">Admin Menu</string>
    <string name="admin_add_support_txt">Add Support</string>
    <string name="admin_view_support_txt">View Support</string>
    <string name="admin_block_support_txt">Block Support</string>
    <string name="admin_enable_support_txt">Enable Support</string>
    <string name="admin_change_support_pin_txt">Change Support PIN</string>
    <string name="admin_delete_support_txt">Delete Support</string>
    <string name="admin_manage_transactions_txt">Manage Transactions</string>
    <string name="admin_deposit_txt">Deposit</string>
    <string name="admin_balance_inq_txt">Balance INQ</string>
    <string name="admin_manual_card_entry_txt">Manual Card Entry</string>
    <string name="admin_phone_authorization_txt">Phone authorization</string>
    <string name="admin_pre_auth_txt">Pre-Auth</string>
    <string name="admin_sale_txt">Sale</string>
    <string name="admin_refund_txt">Refund</string>
    <string name="cashier_key_download_txt">Key Download</string>
    <string name="cashier_terminal_info_txt">Terminal Info</string>
    <string name="cashier_summary_report_txt">Summary Report</string>
    <string name="cashier_reprint_txt">Reprint</string>
    <string name="cashier_settlement_txt">Settlement</string>
    <string name="cashier_change_password_txt">Change Password</string>
    <string name="cashier_menu_txt">Cashier Menu</string>
    <string name="cashier_nav_home">Home</string>
    <string name="cashier_nav_terminal_info">Terminal Info</string>
    <string name="cashier_nav_settings">Settings</string>
    <string name="cashier_nav_help">Help</string>
    <string name="cashier_nav_about_us">About Us</string>
    <string name="cashier_nav_rate_us">Rate Us</string>
    <string name="cashier_nav_logout">Logout</string>
    <string name="how_to_login">How to login?</string>
    <string name="how_to_login_answer">To log in, click the Login button from Main Menu Activity and then enter your username and then select your user type</string>
    <string name="how_to_login_guide">Guide: If you forgot password contact your admin</string>
    <string name="how_to_logout">How to logout?</string>
    <string name="how_to_logout_answer">To log out, go to profile click Logout from bottom and confirm to logout</string>
    <string name="how_to_logout_guide">Guide: Remember to log out after use.</string>
    <string name="how_to_do_transaction">How to do a transaction?</string>
    <string name="how_to_do_transaction_answer">Navigate to Transactions section on Main Menu activity and select transaction type that you want to do</string>
    <string name="how_to_do_transaction_guide">Guide: Double-check details before confirming.</string>
    <string name="how_to_reverse_transaction">How to reverse a transaction?</string>
    <string name="how_to_reverse_transaction_answer">Go to Transactions on Main Menu activity and select Reversal from transaction types and then enter your approval code then confirm to reverse the transaction</string>
    <string name="how_to_reverse_transaction_guide">Guide: Reversal only within 24 hours before settlement done.</string>
    <string name="how_to_do_settlement">How to do settlement?</string>
    <string name="how_to_do_settlement_answer">Go to Settlement and follow prompts</string>
    <string name="how_to_do_settlement_guide">Guide: Only accessible after supervisor approval.</string>
    <string name="manual_card_enter_expiry_date_month_year_txt">Enter Expiry Date/Month/Year</string>
    <string name="manual_card_enter_expiry_date_txt">Enter Expiry Date</string>
    <string name="add_sign_txt">Please add your signature.\n Your signature is required to proceed.</string>
    <string name="add_sign_transaction_amount">Transaction Amount:</string>
    <string name="add_sign_amount">ETB 0.00</string>
    <string name="add_sign_btn_txt">SIGN</string>
    <string name="clear_sign_txt">CLEAR</string>
    <string name="exit_app_title">Exit App</string>
    <string name="exit_app_message">Are you sure you want to close the app?</string>
    <string name="exit_app_cancel">Cancel</string>
    <string name="admin_nav_home">Home</string>
    <string name="admin_nav_manage_supports">Manage Supports</string>
    <string name="admin_nav_manage_transaction">Manage Transaction</string>
    <string name="admin_nav_settings">Settings</string>
    <string name="admin_nav_help">Help</string>
    <string name="admin_nav_about_us">About Us</string>
    <string name="admin_nav_rate_us">Rate Us</string>
</resources>