<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_print"
        android:title="@string/print" />

    <item
        android:id="@+id/action_print_n_times"
        android:title="@string/print_n_times" />


    <item
        android:id="@+id/action_inject_dukpt"
        android:title="@string/inject_dukpt_key" />

    <item
        android:id="@+id/action_master_session_key"
        android:title="@string/inject_master_Session_key" />

    <item
        android:id="@+id/action_erase_all_key"
        android:title="@string/erase_all_key" />

    <item
        android:id="@+id/action_fetch_current_ksn"
        android:title="@string/fetch_current_ksn" />

    <item
        android:id="@+id/action_increase_ksn"
        android:title="@string/increase_ksn" />

    <item
        android:id="@+id/action_usb_communication"
        android:title="@string/usb_communication" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/settings" />
</menu>