<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">
    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/cashier_nav_home"
            />
        <item
            android:id="@+id/nav_terminal_info"
            android:icon="@drawable/baseline_point_of_sale_24"
            android:title="@string/cashier_nav_terminal_info"
            />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/baseline_settings_applications_24"
            android:title="@string/cashier_nav_settings"/>
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/baseline_help_center_24"
            android:title="@string/cashier_nav_help"/>
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/baseline_info_24"
            android:title="@string/cashier_nav_about_us"/>
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/baseline_star_rate_24"
            android:title="@string/cashier_nav_rate_us"/>
    </group>
    <item
        android:title="">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/baseline_logout_24"
                android:title="@string/cashier_nav_logout"/>
        </menu>
    </item>
</menu>
