<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_esign_nib"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/nib_bg2"
    >

    <!-- Header Text -->

    <!-- NIB Bank Logo -->
    <ImageView
        android:id="@+id/nib_logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/approved128px"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"
        android:gravity="center"
        />

    <!-- Signature Prompt -->
    <TextView
        android:id="@+id/signature_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_sign_txt"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/nib_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="0dp" />

    <!-- Amount Display Section -->
    <TextView
        android:id="@+id/amount_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_sign_transaction_amount"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/signature_prompt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp" />

    <TextView
        android:id="@+id/amount_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_sign_amount"
        android:textColor="@color/white"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/amount_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="2dp" />

    <!-- Signature Canvas Area -->
    <net.geidea.payment.sign.SignatureView
        android:id="@+id/signature_canvas"
        android:layout_width="0dp"
        android:layout_height="250dp"

        android:background="@color/white"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/amount_display"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:elevation="20dp"
        android:padding="8dp" />

    <!-- Confirm Signature Button -->
    <Button
        android:id="@+id/confirm_signature_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:text="@string/add_sign_btn_txt"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:background="@drawable/btn_rounded_bg"
        android:textSize="18sp"
        android:textStyle="bold"
        android:backgroundTint="@color/nib_brown1"
        android:elevation="8dp"
        app:layout_constraintTop_toBottomOf="@id/signature_canvas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/clear_signature_button"
        app:layout_constraintWidth_percent="0.4"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp" />

    <!-- Clear Signature Button -->
    <Button
        android:id="@+id/clear_signature_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:text="@string/clear_sign_txt"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="@drawable/btn_rounded_bg"
        android:backgroundTint="@color/nib_brown1"
        android:elevation="8dp"
        app:layout_constraintTop_toBottomOf="@id/signature_canvas"
        app:layout_constraintStart_toEndOf="@id/confirm_signature_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.4"
        android:layout_marginTop="24dp"
        android:layout_marginStart="8dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
